--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
     <span>
       {{ page.date | date: "%Y년 %m월 %d일" }} | {{ author.nickname }}
     </span>
-
+    <img src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=40">
     <div class="fb-share-button" data-href="{{ site.url }}{{ page.url }}" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">공유하기</a></div>
   </div>
 
