Facebook 공유시 썸네일 지원(테스트1)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
 
+  {% include og.html %}
+
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" type="text/css">
 
