iOS 머신러닝 프레임워크 - Core ML 포스팅 작성

--- a/_includes/og.html
+++ b/_includes/og.html
@@ -21,7 +21,7 @@
   <meta content="{{ site.url }}{{ page.url }}" property="og:url">
 {% endif %}
 {% if page.thumbnail %}
-  <meta content="{{ site.url }}/assets/images/{{ page.subdir }}/{{ page.thumbnail }}" property="og:image">
+  <meta content="{{ site.url }}assets/images/{{ page.subdir }}/{{ page.thumbnail }}" property="og:image">
   <meta content="640" property="og:image:width">
   <meta content="360" property="og:image:height">
 {% else %}
